package com.swp391.backend.enums;

public enum BookingSource {
    online,
    walk_in
}
